[B]2.9.1[/B]
- changed: improved USA rating detection

[B]2.9.0[/B]
- added: multiple ratings and uniqueid support (requires Kodi v17)
- fixed: another attempt to fix IMDb outline

[B]2.8.8[/B]
- fixed: potential issue with IMDb outline (thanks scudlee)

[B]2.8.7[/B]
- fixed: IMDb countries

[B]2.8.6[/B]
- fixed: metacritic rating in further scenarios

[B]2.8.5[/B]
- fixed: metacritic rating

[B]2.8.4[/B]
- update author name

[B]2.8.3[/B]
- fixed: Keep Original Title for foreign movies

[B]2.8.2[/B]
- fixed: trying to fix IMDb outline

[B]2.8.1[/B]
- fixed: potential PCRE error due to non-clean regexp

[B]2.8.0[/B]
- fixed: won't scrape IMDb TOP250

[B]2.7.8[/B]
- fixed: add xml header

[B]2.7.7[/B]
- fixed: MetaCritic Score for 100/100 films

[B]2.7.6[/B]
- fixed: IMDb studio/director/writer after layout change

[B]2.7.5[/B]
- fixed: OutlineToPlot function
- fixed: USACert

[B]2.7.4[/B]
- fixed: MetaCritic Score

[B]2.7.3[/B]
- fixed: orginal title won't scrape in some cases

[B]2.7.2[/B]
- changed: make sure to parse the intended page

[B]2.7.1[/B]
- fixed: IMDb genre after layout change

[B]2.7.0[/B]
- fixed: IMDb scraping after layout changes

[B]2.6.2[/B]
- fixed: director(s) and writer(s) scraping in case of IMDbFull is selected

[B]2.6.1[/B]
- fixed: will scrape director(s) as writer(s)

[B]2.6.0[/B]
- updated: outfactored outline/studio/country/top250 to common library
[B]2.5.0[/B]
- updated: outfactored tagline scraping to common library

[B]2.4.0[/B]
- added: aspect tag to imdb poster

[B]2.3.0[/B]
- added: option to scrape rating from MetaCritic (via IMDb)

[B]2.2.3[/B]
- fixed: still to address some html encode issues, now in plots

[B]2.2.2[/B]
- fixed: still to address html encode issues

[B]2.2.1[/B]
- fixed: hopefully fixed issue with html encodes

[B]2.2.0[/B]
- factored out GetIMDBAKATitlesById
- factored out scraping certifications

[B]2.1.9[/B]
- fixed: plot when contains html links (once again)

[B]2.1.8[/B]