@@ -1,3 +1,6 @@
+[B]2.9.2[/B]
+- changed: simplify ratings code
+
 [B]2.9.1[/B]
 - changed: improved USA rating detection
 
